--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -13,10 +13,10 @@
 
    
    <%= form_with(model: item, local: true) do |form| %>
-      <%= form.text_field :name, placeholder: "酒蔵名（必須、最大40文字まで）" %>
+      <%= form.text_field :company_name, placeholder: "酒蔵名（必須、最大40文字まで）" %>
       <%= form.text_field :name, placeholder: "お酒の名前（必須、最大40文字まで）" %>
-      <%= form.text_field :name, placeholder: "飲み口（必須、甘口や辛口など）"%>
-      <%= form.text_field :name, placeholder: "オススメの飲み方（必須、冷酒や熱燗など）"%>
-      <%= form.text_area :text, placeholder: "お酒の説明（必須、最大1,000文字まで）"%>
+      <%= form.text_field :nomikuchi_id, placeholder: "飲み口（必須、甘口や辛口など）"%>
+      <%= form.text_field :nomikata_id, placeholder: "オススメの飲み方（必須、冷酒や熱燗など）"%>
+      <%= form.text_area :description, placeholder: "お酒の説明（必須、最大1,000文字まで）"%>
       <%= form.submit "投稿する" %>
    <% end %>
