--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,18 +1,18 @@
 <div class="content_post" style="background-image: url(<%= item.image %>);">
    <div class="more">
-      <span><%= image_tag 'arrow_top.png'%></span>
+      <%= image_tag item.image, class: 'item-image' %>
       <ul class="more_list">
         <li>
           <%= link_to '詳細', item_path(item.id), method: :get %>
         </li>
           <% if user_signed_in? && current_user.id == item.user_id %>
         <li>
-            <%= link_to '削除', item_path(item.id), method: :delete %>
+          <%= link_to '削除', item_path(item.id), method: :delete %>
         </li>
       <% end %>
     </ul>
   </div>
-  <p><%= item.text %></p>
+  <p><%= item.name %></p>
   <span class="name">
     <a href="/users/<%= item.user.id %>">
       <span>投稿者</span><%= item.user.nickname %>
