--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,19 +1,22 @@
 <div class="contents row">
-  <div class="content_post" style="background-image: url(<%= @item.image %>);">
+  <%= image_tag @item.image ,class:"item-box-img" %>    
    <% if user_signed_in? && current_user.id == @item.user_id %>
     <div class="more">
       <span><%= image_tag 'arrow_top.png' %></span>
       <ul class="more_list">
-        <li>
-          <%= link_to '削除', item_path(@item.id), method: :delete %>
-        </li>
+        
       </ul>
     </div>
     <% end %>
-    <p><%= @item.text %></p>
+    <span class="name">
+     <span>お酒の名前</span><p><%= @item.name %></p>
+     <span>酒蔵の名前</span><div><%= @item.company_name %></div>
+     <span>味わい</span><div><%= @item.nomikuchi %></div>
+     <span>美味しい飲み方</span><div><%= @item.nomikata %></div>
+     <span>投稿者のコメント</span><div><%= @item.description %></div>
     <span class="name">
       <a href="/users/<%= @item.user.id %>">
-        <span>投稿者</span><%= @item.user.nickname %>
+        <span>written by</span><%= @item.user.nickname %>
       </a>
     </span>
   </div>
