--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,8 +1,7 @@
-<div class = "wrapper">
  <div class="img-upload">
       <div class="weight-bold-text">
         お酒の画像
-        <span class="indispensable">任意</span>
+        <span class="indispensable">（任意）</span>
       </div>
       <div class="click-upload">
         <p>
@@ -22,4 +21,3 @@
       <%= form.text_area :description, placeholder: "お酒の説明（必須、最大1,000文字まで）"%>
       <%= form.submit "投稿する" %>
    <% end %>
-<% end %>
