--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -638,7 +638,7 @@ ul li {
 body,
 html {
   height: 100%;
-  background-color: #f5f5f3;
+  background-color: #fffacd;
 }
 
 body {
@@ -654,15 +654,15 @@ h6,
 body {
   line-height: 1.57;
   letter-spacing: 0.15em;
-  font-size: 16px;
-  color: #666;
+  font-size: 20px;
+  color: #000080;
   font-family: 'Unica One', "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
   margin: 0;
 }
 
 a {
   text-decoration: none;
-  color: #666;
+  color: #ff69b4;
 }
 
 a:hover {
@@ -707,8 +707,8 @@ form input[type="submit"] {
 header.header div.header__bar.row div.grid-6 a.post {
   padding: 8px 20px;
   font-size: 14px;
-  border: 2px solid #57C3E9;
-  color: #57C3E9;
+  border: 2px solid #7fffd4;
+  color: #fa8072;
   font-weight: bold;
   text-align: center;
   border-radius: 3px;
@@ -886,7 +886,7 @@ div.contents.row div.content_post:after {
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 62%, rgba(0, 0, 0, 0.85) 100%);
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 62%, rgba(0, 0, 0, 0.85) 100%);
   z-index: 1;
-  border-radius: 3px;
+  border-radius: 10px 20px 30px 40px / 5px 10px 50px 100px;
 }
 
 div.contents.row div.content_post .more {
@@ -988,17 +988,17 @@ form textarea {
   width: 100%;
   margin: 5px 0 15px;
   padding: 10px;
-  border: 1px solid #D8D8D8;
+  border: 1px solid #000000;
   border-radius: 5px;
   font-family: "游ゴシック", "YuGothic";
 }
 
 form input[type="submit"] {
-  background-color: #57C3E9;
+  background-color: #7fffd4;
   border-radius: 20px;
-  color: #fff;
+  color: #000000;
   border: 0;
-  font-size: 18px;
+  font-size: 25px;
 }
 
 form input[type="submit"]:hover {
@@ -1009,16 +1009,16 @@ form input[type="submit"]:hover {
   margin: 20px 0;
   padding: 30px;
   box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
-  background-color: white;
+  background-color:#f5f5dc;
   box-sizing: border-box;
 }
 
 .container h3 {
   margin: 0 0 20px;
   text-align: center;
-  font-weight: normal;
-  font-size: 20px;
-  color: #666;
+  font-weight: bold;
+  font-size: 40px;
+  color: #2f4f4f;
 }
 
 .comments {
