--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -87,7 +87,7 @@
                     date_separator: '%s'),
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
     </div>
-    <p class='info-text'>※ 本人情報は正しく入力してください。20歳未満の方は登録できません。</p>
+    <p class='info-text'>※ 20歳未満の方は登録できません。</p>
   </div>
   <div class="form-group">
     <h2 class='form-bottom-text'>
