--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="contents row">
   <div class="container">
-    <h2>アカウント作成</h2>
+    <h2>💓アカウント作成💓</h2>
 
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
   <div class='form-header'>
     <h1 class='form-header-text'>
-      情報入力画面
+      🍶情報入力画面🍶
     </h1>
   </div>
 
@@ -87,13 +87,13 @@
                     date_separator: '%s'),
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
     </div>
-    <p class='info-text'>※ 20歳未満の方は登録できません。</p>
+    <p class='info-text'>※ 20歳未満の方は登録できません。未成年者の飲酒は法律で禁止されています✋</p>
   </div>
   <div class="form-group">
     <h2 class='form-bottom-text'>
       「アカウント作成」のボタンを押すことにより、
-      <span>利用規約</span>
-      <br>に同意したものとみなします
+      <span>⚠️利用規約⚠️</span>
+      に同意したものとみなします
     </h2>
   </div>
   <div class='register-btn'>
