--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
   <div class="container">
-  <h3>新規投稿</h3>
+  <h3>💠新規投稿💠</h3>
    <%= render partial: "form", locals: { item: @item } %>
   </div>
 </div>
