--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -97,7 +97,7 @@
     </h2>
   </div>
   <div class='register-btn'>
-    <%= f.submit "アカウント作成" ,class:"register-red-btn" %>
+    <%= f.submit "👉アカウント作成👈" ,class:"register-red-btn" %>
   </div>
   <p class='register-info'>利用規約</p>
 </div>
